# gbz185-sdk

./: .gitignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json
.github/workflows/: multi-language-sdks.yml  pages.yml
docs/: API_REFERENCE.md  CONFORMANCE.md  GITHUB_PAGES.md  MULTI_LANGUAGE_SDKS.md  NPM_RELEASE.md  SDK_GUIDE.md
examples/: calendar.ts
sdks/go/: README.md  go.mod
sdks/go/gbz185/: client.go  conformance.go  identity_code.go  identity_code_test.go  transport.go
sdks/java/: README.md  pom.xml
sdks/java/src/main/java/dev/idevlab/gbz185/: AgentIdentityCodeParts.java  AgentInterconnectClient.java  Conformance.java  HttpJsonTransport.java  IdentityCodes.java  InProcessJsonTransport.java  (+1 more)
sdks/python/: README.md  pyproject.toml
sdks/python/examples/: basic_client.py
sdks/python/gbz185_sdk/: __init__.py  client.py  conformance.py  identity_code.py  transport.py
sdks/python/tests/: test_sdk.py
sdks/rust/: Cargo.toml  README.md
sdks/rust/src/: client.rs  conformance.rs  identity_code.rs  lib.rs  transport.rs
site/: api.html  conformance.html  examples.html  getting-started.html  index.html  multi-language.html  setup.html
site/assets/: docs.js  styles.css
src/: agent-maintenance.ts  authorization.ts  client.ts  conformance.ts  credentials.ts  description-registry.ts  discovery.ts  factory.ts  functional-architecture.ts  identity-code.ts  identity-registry.ts  index.ts  interaction.ts  message-distribution.ts  tool-access.ts  tools.ts  transport.ts  types.ts  validation.ts
test/: sdk.test.ts
(+1 files in other folders)
